<resources>
    <string name="app_name">SimpleRSS</string>

    <string name="subscriptions_add_text_open">Expand options</string>
    <string name="subscriptions_add_text_close">Close options</string>
    <string name="subscriptions_add_folder_text">Add folder</string>
    <string name="subscriptions_add_subscription_text">Add feed</string>

    <string name="add_new_subscription_address_hint">Add by URL</string>
    <string name="add_new_subscription_address_checking_process">Verification</string>
    <string name="add_new_subscription_check">Check address</string>
    <string name="add_new_subscription_save">Save address</string>

    <string name="add_new_subscription_folder_hint">Folder name</string>
    <string name="add_new_subscription_folder_save">Create a folder</string>
    <string name="add_new_subscription_folder_must_be_not_empty">Please enter a name</string>

    <string name="option_menu_delete">Delete</string>
    <string name="option_menu_save">Save</string>
    <string name="folder_menu_mode">Mode</string>
    <string name="folder_menu_edit_title">Edit</string>
    <string name="feed_date_today">Today</string>
    <string name="feed_date_yesterday">Yesterday</string>
    <string name="error_data_format_exception">No feed found</string>
    <string name="error_data_or_malformed_exception">No feed found or malformed</string>
    <string name="error_illegal_argument_url">Incorrect address format</string>
    <string name="error_link_to_folder_already_exist">This feed has already been added to the folder</string>

    <string name="folder_go_upward">Scroll to up</string>

    <string name="empty_content_contacts">Contacts</string>
    <string name="contacts_header">Contacts</string>
    <string name="contacts_info">Hello. There is no separate site, but someday, maybe there will be. In the meantime, I\'ll leave my contacts below, feel free to ask any questions about this app</string>
    <string name="open_with">Open with</string>

    <string name="subscription_folder_edit_hint">New folder name</string>
    <string name="subscription_subscription_edit_hint">New subscription name</string>
    <string name="subscription_feed_error">Something is wrong with the feed</string>
    <string name="subscription_feed_error_action">Reload</string>
    <string name="subscription_feed_empty">The feed is empty</string>
    <string name="subscription_empty">Feed list is empty</string>
    <string name="subscription_empty_first">Add your first</string>
    <string name="subscription_folder_empty">The folder is empty</string>
    <string name="subscription_folder_add_subscription">Add new feed</string>

    <string name="tutorial_pinch_zoom_in">To see all feeds, make a pinch to zoom in gesture</string>
    <string name="tutorial_pinch_zoom_out">To see tapes without folders, use the pinch to zoom out gesture</string>
    <string name="tutorial_assign_subscription_to_folder">To add a feed to a folder, just drag and drop it there</string>
    <string name="tutorial_create_folder_or_subscription">To add a feed or create a folder, use the button below</string>
    <string name="tutorial_remove_subscription">To remove a feed, swipe left from the list on the home screen</string>
    <string name="tutorial_unlink_subscription">To unlink the feed from a folder, swipe it to the right in the folder list</string>
    <string name="tutorial_manual_folder_sorting">Folders can be sorted manually using a long tap</string>
    <string name="tutorial_manual_folder_mode">You can change the display mode of feeds in a folder using the button</string>

    <string name="content_description_image">Picture</string>

    <string name="github_link" translatable="false">https://github.com/GeniusRUS</string>
    <string name="email_link" translatable="false">Gen1usRUS@yandex.ru</string>

    <plurals name="subscriptions_folder_count_template">
        <item quantity="zero">%1$d = No sources</item>
        <item quantity="one">%1$d source</item>
        <item quantity="few">%1$d sources</item>
        <item quantity="many">%1$d sources</item>
        <item quantity="other">%1$d sources</item>
    </plurals>

    <plurals name="folder_feed_list_not_fully_loaded">
        <item quantity="zero">%1$d - no feeds to load</item>
        <item quantity="one">%1$d feed failed to load</item>
        <item quantity="few">%1$d feed failed to load</item>
        <item quantity="many">%1$d feed failed to load</item>
        <item quantity="other">%1$d feed failed to load</item>
    </plurals>
</resources>