<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.contacts.ContactsBottomSheetDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/contacts_header"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/contacts_info"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/email_link"
        android:drawablePadding="8dp"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_vector_email"/>

    <TextView
        android:id="@+id/github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/github_link"
        android:drawablePadding="8dp"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_vector_github"/>
</LinearLayout>